[tool.poetry]
name = "deployment"
version = "0.1.0"
description = ""
authors = ["Maxime Denis <maxime.denis@fgov.bosa.be>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
